--- a/source/Makefile
+++ b/source/Makefile
@@ -4,7 +4,7 @@ GCCVER = 4.4.3
 TARGET = $(ARCH)-elf-escape
 BUILDDIR = $(abspath build/$(ARCH)-release)
 DIST = ../toolchain/$(ARCH)
-DISKMOUNT = diskmnt
+DISKMOUNT = disk
 HDD = $(BUILDDIR)/hd.img
 ISO = $(BUILDDIR)/cd.iso
 ISO_TEST = $(BUILDDIR)/cd_test.iso
