--- a/gimmix/org/Makefile
+++ b/gimmix/org/Makefile
@@ -6,7 +6,7 @@
 #   In fact, CWEB 3.61 is recommended for making hardcopy or PDF documentation.
 
 #   If you prefer optimization to debugging, change -g to something like -O:
-CFLAGS = -g
+CFLAGS = -g -O3
 
 BUILD = build
 TEX = tex
