--- a/source/Makefile
+++ b/source/Makefile
@@ -1,8 +1,9 @@
 # general
-ARCH = mmix
-GCCVER = 4.6.0
+ARCH = i586
+GCCVER = 4.4.3
 TARGET = $(ARCH)-elf-escape
-BUILDDIR = $(abspath build/$(ARCH)-release)
+RELBUILD = build/$(ARCH)-debug
+BUILDDIR = $(abspath $(RELBUILD))
 DIST = ../toolchain/$(ARCH)
 DISKMOUNT = disk
 HDD = $(BUILDDIR)/hd.img
@@ -20,7 +21,7 @@ SYMBOLS = $(BUILDDIR)/kernel.symbols
 KVM = -enable-kvm
 QEMU = qemu-system-i386
 #-net nic,model=ne2k_pci -net user
-QEMUARGS = -smp 4 -serial stdio -hda $(HDD) -boot order=d -vga std -m 32 -localtime
+QEMUARGS = -smp 1 -serial stdio -hda $(HDD) -boot order=d -vga std -m 128 -localtime
 ECO32 = ../eco32
 ECOSIM = $(ECO32)/build/bin/sim
 ECOMON = $(ECO32)/build/monitor/monitor.bin
@@ -205,6 +206,14 @@ teste:	all hdd prepareTest
 
 qemu:	all prepareQemu prepareRun
 	$(QEMU) $(QEMUARGS) -cdrom $(ISO) $(KVM) > log.txt 2>&1
+
+qemumb:	all prepareQemu prepareRun
+	$(QEMU) $(QEMUARGS) -cdrom $(ISO) -kernel $(BUILD)/kernel.bin -append 'videomode=vesa' \
+		-initrd "$(RELBUILD)/driver_pci.bin /dev/pci,$(RELBUILD)/driver_ata.bin /system/devices/ata,$(RELBUILD)/driver_cmos.bin /dev/cmos,$(RELBUILD)/driver_fs.bin /dev/fs cdrom iso9660"
+
+qemumbrd:	all prepareQemu prepareRun
+	$(QEMU) $(QEMUARGS) -kernel $(BUILD)/kernel.bin -append 'videomode=vesa' \
+		-initrd "$(RELBUILD)/driver_ramdisk.bin /dev/ramdisk $(RELBUILD)/cd.iso,$(RELBUILD)/driver_cmos.bin /dev/cmos,$(RELBUILD)/driver_fs.bin /dev/fs /dev/ramdisk iso9660,$(RELBUILD)/cd.iso"
 
 bochs: all prepareBochs prepareRun
 	bochs -f bochs.cfg -q
