--- a/source/lib/cpp/SConscript
+++ b/source/lib/cpp/SConscript
@@ -1,4 +1,6 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeLib(env, target = 'stdc++', source = [Glob('*.cpp'), Glob('*/*.cpp')], LIBS = ['c'])
+env.EscapeLib(
+	env, target = 'stdc++', source = [Glob('*.cpp'), Glob('*/*/*.cpp')], LIBS = ['c', 'gcc_eh']
+)
