--- a/source/lib/cpp/SConscript
+++ b/source/lib/cpp/SConscript
@@ -4,5 +4,5 @@ Import('env')
 myenv = env.Clone()
 myenv.Append(LINKFLAGS = ' -nodefaultlibs')
 myenv.EscapeLib(
-	myenv, target = 'stdc++', source = [Glob('*.cpp'), Glob('*/*/*.cpp')], LIBS = ['c', 'gcc_eh']
+	myenv, target = 'stdc++', source = [Glob('*.cpp'), Glob('*/*/*.cpp')], LIBS = ['c']
 )
