--- a/source/user/c/dynlink/SConscript
+++ b/source/user/c/dynlink/SConscript
@@ -2,10 +2,11 @@
 
 Import('env')
 
-myenv = env.Clone()
-myenv.Append(LINKFLAGS = ' -nostartfiles -Wl,-T,user/c/dynlink/ld.conf')
-prog = myenv.EscapeCProg(
-	myenv, 'bin', target = 'dynlink', source = ['startup.S', Glob('*.c')],
-	force_static = True, var_addr = False
-)
-myenv.Depends(prog, 'ld.conf')
+if env['ARCH'] == 'i586':
+	myenv = env.Clone()
+	myenv.Append(LINKFLAGS = ' -nostartfiles -Wl,-T,user/c/dynlink/ld.conf')
+	prog = myenv.EscapeCProg(
+		myenv, 'bin', target = 'dynlink', source = ['startup.S', Glob('*.c')],
+		force_static = True, var_addr = False
+	)
+	myenv.Depends(prog, 'ld.conf')
