Improved accounting, finished top and extended process names. And we have an info-library for reading stuff from vfs-info files. This is the old proc-library, but extended by memusage.

--- a/source/user/cpp/SConscript
+++ b/source/user/cpp/SConscript
@@ -6,5 +6,5 @@ if env['ARCH'] == 'i586':
 	env.SConscript(env.Glob('*/SConscript'), 'env')
 else:
 	# TODO mmix-ld is unable to link some c++ apps
-	for f in ['init', 'less', 'libcpptest', 'ls', 'ps', 'sort', 'ts']:
+	for f in ['init', 'less', 'libcpptest', 'ls', 'ps', 'sort', 'ts', 'top']:
 		env.SConscript(f + '/SConscript', 'env')
