--- a/source/user/cpp/ts/SConscript
+++ b/source/user/cpp/ts/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCXXProg('bin', target = 'ts', source = env.Glob('*.cpp'), LIBS = ['proc'])
+env.EscapeCXXProg('bin', target = 'ts', source = env.Glob('*.cpp'), LIBS = ['info'])
