--- a/source/user/cpp/ls/SConscript
+++ b/source/user/cpp/ls/SConscript
@@ -1,4 +1,4 @@
 # -*- Mode: Python -*-
 
 Import('env')
-env.EscapeCXXProg('bin', target = 'ls', source = env.Glob('*.cpp'))
+env.EscapeCXXProg('bin', target = 'ls', source = env.Glob('*.cpp'), LIBS = ['usergroup'])
